# paraflow-extreme

./: .dockerignore  .gitignore  .gitleaks.toml  Cargo.toml  Dockerfile  README.md  cliff.toml  docker-compose.yml
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: ci.yml  docker.yml  release.yml  security.yml
adapters/indexer/pf-indexer-es/: Cargo.toml
adapters/indexer/pf-indexer-stdout/src/: lib.rs
adapters/queue/pf-queue-memory/: Cargo.toml
adapters/queue/pf-queue-sqs/src/: lib.rs
adapters/reader/pf-reader-ndjson/: Cargo.toml
adapters/reader/pf-reader-ndjson/src/: lib.rs  s3.rs
adapters/reader/pf-reader-parquet/: Cargo.toml
adapters/reader/pf-reader-parquet/src/: lib.rs  s3.rs
adapters/transform/pf-enrichment/src/: loader.rs  registry.rs  row.rs
adapters/transform/pf-transform/: Cargo.toml
adapters/transform/pf-transform/src/: config.rs  lib.rs
cli/: Cargo.toml
cli/common/src/: format.rs  lib.rs
cli/discoverer/: Cargo.toml
cli/discoverer/src/: args.rs  main.rs  progress.rs  run.rs
cli/transform/: Cargo.toml
cli/transform/src/: main.rs
cli/worker/: Cargo.toml  build.rs
cli/worker/src/: args.rs  main.rs  progress.rs  run.rs
components/centipede/: .env.example  README.md  docker-compose.yml  manifest.yaml
components/centipede/cli/common/: Cargo.toml
components/centipede/cli/common/src/: args.rs  format.rs  logging.rs
components/centipede/cli/discoverer/: Cargo.toml
components/centipede/cli/discoverer/src/: args.rs  main.rs  progress.rs  run.rs
components/centipede/cli/src/: main.rs
components/centipede/cli/transform/: Cargo.toml
components/centipede/cli/worker/: Cargo.toml
components/centipede/cli/worker/src/: profiling.rs  run.rs
components/centipede/discoverer/: Cargo.toml
components/centipede/discoverer/src/: callback.rs  config.rs  lib.rs  sfn.rs  stats.rs
components/centipede/discoverer/src/filter/: composite.rs  date.rs  mod.rs
components/centipede/discoverer/src/output/: mod.rs
components/centipede/discoverer/src/partition/: mod.rs
components/centipede/discoverer/src/s3/: client.rs  mod.rs  retry.rs
components/centipede/docker/: Dockerfile  README.md  release.sh  run.sh
components/centipede/file-processor/src/: lib.rs
components/centipede/infra/scripts/: benchmark-orchestrator.sh  benchmark-runner.sh
components/centipede/infra/terraform/: .gitignore  example.tfvars.template
components/centipede/tests/integration/: Cargo.toml  e2e_test.rs
components/centipede/worker/: Cargo.toml
components/centipede/worker/src/: lib.rs  reader.rs  router.rs
components/centipede/worker/src/destination/: stats.rs
components/centipede/worker/src/pipeline/: thread_stats.rs
components/centipede/worker/src/prefetch/: buffer.rs  config.rs  mod.rs
components/centipede/worker/src/source/: mod.rs
core/pf-traits/: Cargo.toml
core/pf-traits/src/: lib.rs  queue.rs  reader.rs
core/pf-types/src/: batch.rs  checkpoint.rs  lib.rs  work_item.rs
crates/core/pf-error/: Cargo.toml
crates/core/pf-error/src/: lib.rs
crates/core/pf-traits/src/: indexer.rs  queue.rs  transform.rs
crates/core/pf-types/: Cargo.toml
crates/core/pf-types/src/: checkpoint.rs  config.rs
crates/indexer/pf-indexer-es/src/: lib.rs
crates/indexer/pf-indexer-stdout/: Cargo.toml
crates/orchestration/pf-discoverer/: Cargo.toml
crates/orchestration/pf-discoverer/src/: config.rs  discoverer.rs  filter.rs  lib.rs  sfn.rs
crates/orchestration/pf-discoverer/src/filter/: composite.rs  pattern.rs  size.rs
crates/orchestration/pf-discoverer/src/output/: mod.rs  sqs.rs  stdout.rs
crates/orchestration/pf-discoverer/src/partition/: expression.rs  filter.rs  mod.rs  time.rs
crates/orchestration/pf-file-processor/: Cargo.toml
crates/orchestration/pf-worker/: Cargo.toml
crates/orchestration/pf-worker/src/: config.rs  lib.rs  metadata_cache.rs  reader.rs  router.rs  stats.rs  worker.rs
crates/orchestration/pf-worker/src/destination/: mod.rs  stats.rs  stdout.rs
crates/orchestration/pf-worker/src/pipeline/: mod.rs  processor.rs  thread_stats.rs
crates/orchestration/pf-worker/src/prefetch/: buffer.rs  config.rs  mod.rs  prefetcher.rs
crates/orchestration/pf-worker/src/source/: mod.rs  sqs.rs  stdin.rs
crates/queue/pf-queue-memory/src/: lib.rs
crates/queue/pf-queue-sqs/: Cargo.toml
crates/reader/pf-reader-ndjson/: Cargo.toml
crates/reader/pf-reader-ndjson/src/: lib.rs  reader.rs  s3.rs
crates/reader/pf-reader-parquet/: Cargo.toml
crates/reader/pf-reader-parquet/src/: lib.rs  reader.rs  s3.rs
crates/support/pf-accumulator/: Cargo.toml
crates/support/pf-accumulator/src/: lib.rs
crates/support/pf-metrics/: Cargo.toml
crates/support/pf-metrics/src/: lib.rs
crates/transform/pf-enrichment/: Cargo.toml
crates/transform/pf-enrichment/src/: cidr_table.rs  config.rs  exact_table.rs  lib.rs  loader.rs  registry.rs  row.rs
crates/transform/pf-transform/: Cargo.toml
crates/transform/pf-transform/src/: builtin.rs  config.rs  conversion.rs  lib.rs  rhai_transform.rs
docker/: README.md  build.sh  setup-test-data.sh
infra/scripts/: benchmark-runner.sh  health-check.sh
infra/terraform/: .gitignore  backend.tf  example.tfvars  example.tfvars.template  main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/modules/ec2/: main.tf  outputs.tf  user_data_discoverer.sh.tpl  user_data_worker.sh.tpl  variables.tf
infra/terraform/modules/job/: main.tf
infra/terraform/modules/shared/: main.tf  variables.tf
infra/terraform/modules/sqs/: main.tf  outputs.tf  variables.tf
support/pf-accumulator/src/: lib.rs
support/pf-arrow-utils/: Cargo.toml
support/pf-arrow-utils/src/: lib.rs
support/pf-dlq/: Cargo.toml
support/pf-dlq/src/: lib.rs
support/pf-metrics/: Cargo.toml
testing/localstack/: README.md  docker-compose.yml  test-pipeline.sh
testing/localstack/init-scripts/: 01-create-resources.sh
tests/integration/: Cargo.toml  discoverer_test.rs  e2e_test.rs  main.rs  sqs_test.rs  worker_test.rs
tests/integration/common/: localstack.rs  mod.rs
(+12 files in other folders)
