[workspace]
resolver = "2"
members = [
    "crates/core/*",
    "crates/queue/*",
    "crates/reader/*",
    "crates/indexer/*",
    "crates/transform/*",
    "crates/orchestration/*",
    "crates/support/*",
    "cli",
    "cli/common",
    "cli/discoverer",
    "cli/worker",
    "tests/integration",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
simd-json = "0.14"

# Arrow ecosystem
arrow = { version = "54", features = ["prettyprint"] }
arrow-json = "54"
parquet = { version = "54", features = ["async", "object_store"] }
object_store = { version = "0.11", features = ["aws"] }

# Bytes
bytes = "1"
url = "2"

# AWS SDK
aws-config = "1"
aws-credential-types = "1"
aws-sdk-sqs = "1"
aws-sdk-s3 = "1"

# Elasticsearch
elasticsearch = "8"

# Scripting
rhai = { version = "1.20", features = ["sync"] }

# Enrichment
hashbrown = { version = "0.15", features = ["rayon"] }
ahash = "0.8"
ip_network = "0.4"
ip_network_table = "0.2"

# Parallelism
rayon = "1.10"

# Metrics
prometheus = "0.13"

# HTTP server
axum = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# CSV parsing
csv = "1.3"

# Compression
async-compression = { version = "0.4", features = ["tokio", "gzip", "zstd"] }

# Internal crates
pf-types = { path = "crates/core/pf-types" }
pf-error = { path = "crates/core/pf-error" }
pf-traits = { path = "crates/core/pf-traits" }
