[workspace]
resolver = "2"
members = [
    # Core
    "core/*",
    # Adapters - Queue
    "adapters/queue/*",
    # Adapters - Reader
    "adapters/reader/*",
    # Adapters - Indexer
    "adapters/indexer/*",
    # Adapters - Transform
    "adapters/transform/*",
    # Support
    "support/*",
    # Components - Centipede
    "components/centipede/discoverer",
    "components/centipede/worker",
    "components/centipede/file-processor",
    "components/centipede/cli",
    "components/centipede/cli/common",
    "components/centipede/cli/discoverer",
    "components/centipede/cli/worker",
    "components/centipede/cli/transform",
    "components/centipede/tests/integration",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
simd-json = "0.14"

# Arrow ecosystem
arrow = { version = "54", features = ["prettyprint"] }
arrow-json = "54"
parquet = { version = "54", features = ["async", "object_store"] }
object_store = { version = "0.11", features = ["aws"] }

# Bytes
bytes = "1"
url = "2"

# AWS SDK
aws-config = "1"
aws-credential-types = "1"
aws-sdk-sqs = "1"
aws-sdk-s3 = "1"
aws-sdk-sfn = "1"

# Elasticsearch
elasticsearch = "8"

# Scripting
rhai = { version = "1.20", features = ["sync"] }

# Enrichment
hashbrown = { version = "0.15", features = ["rayon"] }
ahash = "0.8"
ip_network = "0.4"
ip_network_table = "0.2"

# Parallelism
rayon = "1.10"

# Metrics
prometheus = "0.13"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.27", features = ["metrics"] }

# HTTP server
axum = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# CSV parsing
csv = "1.3"

# Compression
async-compression = { version = "0.4", features = ["tokio", "gzip", "zstd"] }

# Internal crates - Core
pf-types = { path = "core/pf-types" }
pf-error = { path = "core/pf-error" }
pf-traits = { path = "core/pf-traits" }

# === Release Profile Optimizations ===
# These settings significantly improve runtime performance at the cost of
# longer compile times. LTO enables cross-crate inlining which is critical
# for Arrow compute operations and async runtime integration.

[profile.release]
lto = "thin"          # Good balance of compile time vs optimization
codegen-units = 1     # Better optimization, single codegen unit
panic = "abort"       # Smaller binary, no unwinding overhead

# Maximum performance profile for production deployments.
# Use with: cargo build --profile release-max
[profile.release-max]
inherits = "release"
lto = "fat"           # Full LTO for maximum optimization
