[package]
name = "pf-reader-ndjson"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Streaming NDJSON file reader with S3 and compression support for paraflow-extreme"

[dependencies]
# Internal
pf-types = { workspace = true }
pf-traits = { workspace = true }
pf-error = { workspace = true }

# Arrow
arrow = { workspace = true }
arrow-json = { workspace = true }

# Async
tokio = { workspace = true, features = ["fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Object store for S3 streaming
object_store = { workspace = true }

# Compression
async-compression = { workspace = true }

# Other
tracing = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3.10"
flate2 = "1.0"
