[package]
name = "pf-transform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Rhai-based transform for Paraflow Extreme pipelines"

[dependencies]
# Internal crates
pf-traits = { path = "../../../core/pf-traits" }
pf-error = { path = "../../../core/pf-error" }
pf-enrichment = { path = "../pf-enrichment" }

# Scripting engine (sync feature for thread-safe Engine)
rhai = { workspace = true }

# Arrow integration
arrow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Async for script loading
tokio = { workspace = true, features = ["fs"] }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"
