[package]
name = "pf-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core types for Paraflow Extreme: WorkItem, Batch, Checkpoint"

[dependencies]
arrow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
