[package]
name = "pf-accumulator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Batch accumulator for optimal indexer batch sizing"

[dependencies]
arrow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
